syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";
import "google/protobuf/timestamp.proto";
import "types.proto";

service WorkerRepositoryService {
  rpc GetNextContainerRequest(GetNextContainerRequestRequest)
      returns (GetNextContainerRequestResponse) {}
  rpc SetImagePullLock(SetImagePullLockRequest)
      returns (SetImagePullLockResponse) {}
  rpc RemoveImagePullLock(RemoveImagePullLockRequest)
      returns (RemoveImagePullLockResponse) {}
  rpc AddContainerToWorker(AddContainerToWorkerRequest)
      returns (AddContainerToWorkerResponse) {}
  rpc RemoveContainerFromWorker(RemoveContainerFromWorkerRequest)
      returns (RemoveContainerFromWorkerResponse) {}
  rpc GetWorkerById(GetWorkerByIdRequest) returns (GetWorkerByIdResponse) {}
}

message GetNextContainerRequestRequest { string worker_id = 1; }

message GetNextContainerRequestResponse {
  bool ok = 1;
  types.ContainerRequest container_request = 2;
  bool received_request = 3;
  string error_msg = 4;
}

message SetImagePullLockRequest {
  string worker_id = 1;
  string image_id = 2;
}
message SetImagePullLockResponse {
  bool ok = 1;
  string error_msg = 2;
}

message RemoveImagePullLockRequest {
  string worker_id = 1;
  string image_id = 2;
}
message RemoveImagePullLockResponse {
  bool ok = 1;
  string error_msg = 2;
}

message AddContainerToWorkerRequest {
  string worker_id = 1;
  string container_id = 2;
}

message AddContainerToWorkerResponse {
  bool ok = 1;
  string error_msg = 2;
}

message RemoveContainerFromWorkerRequest {
  string worker_id = 1;
  string container_id = 2;
}

message RemoveContainerFromWorkerResponse {
  bool ok = 1;
  string error_msg = 2;
}

message GetWorkerByIdRequest { string worker_id = 1; }

message GetWorkerByIdResponse {
  bool ok = 1;
  types.Worker worker = 2;
  string error_msg = 3;
}
